<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E20039"
    tools:context=".Menu">

    <Button
        android:id="@+id/btn_acerca"
        android:layout_width="191dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#FDFDFD"
        android:text="@string/acerca_de"
        android:textColor="#E20039"
        android:textColorLink="#F1EFEF"
        app:layout_constraintBottom_toTopOf="@+id/btn_cerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="275dp"
        android:layout_height="109dp"
        android:layout_marginTop="35dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/nuestra_compani"
        android:textColor="#FAF6F6"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/vision"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="337dp"
        android:layout_height="141dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/textolargo"
        android:textColor="#FBFBFB"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="278dp"
        android:layout_height="197dp"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ls" />

    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="191dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FDFDFD"
        android:text="@string/cerrar_sesion"
        android:textColor="#E20039"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>