<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E20039"
    tools:context=".AcercaDe">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="347dp"
        android:layout_height="90dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/nombremio"
        android:textColor="#FDFCFC"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_llamada"
        android:layout_width="158dp"
        android:layout_height="76dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#EAE5E5"
        android:text="@string/contactotbn"
        android:textColor="#000000"
        android:textColorLink="#150505"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnemail"
        android:layout_width="151dp"
        android:layout_height="74dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="77dp"
        android:backgroundTint="#EAE5E5"
        android:text="@string/hablemosbtn"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="296dp"
        android:layout_height="285dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_llamada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image" />

    <Button
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="#090808"
        android:text="@string/volverbtn"
        android:textColor="#E8DFDF"
        android:textColorLink="#F8F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_llamada"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>