<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2F2"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_usuario"
        android:layout_width="282dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#707070"
        android:ems="10"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/text_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_usuario" />

    <TextView
        android:id="@+id/text_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="serif"
        android:text="@string/contrasena"
        android:textColor="#252424"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/editText_contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_usuario" />

    <Button
        android:id="@+id/button_actmain_iniciarsesion"
        android:layout_width="142dp"
        android:layout_height="66dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#E20039"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_contrasena"
        app:rippleColor="#131212" />

    <TextView
        android:id="@+id/text_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="227dp"
        android:fontFamily="serif"
        android:text="@string/usuario"
        android:textColor="#252424"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_ls" />

    <EditText
        android:id="@+id/editText_contrasena"
        android:layout_width="282dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#707070"
        android:ems="10"
        android:inputType="text|textPassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_contraseña" />

    <ImageView
        android:id="@+id/logo_ls"
        android:layout_width="323dp"
        android:layout_height="156dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="Logo_lasegunda"
        app:layout_constraintBottom_toTopOf="@+id/text_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ls" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="monospace"
        android:text="@string/Mesa_ayuda"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_actmain_iniciarsesion" />

</androidx.constraintlayout.widget.ConstraintLayout>